platform/components/observability/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-observability
  namespace: observability
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 3000
      protocol: TCP
  egress:
  - to:
    - podSelector: {}
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    - port: 10250
      protocol: TCP
    - port: 9100
      protocol: TCP
    - port: 587
      protocol: TCP
    - port: 9153
      protocol: TCP
    - port: 9253
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          infra.fredrir.com/tier: project
    ports:
    - port: 9090
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: object-store
      podSelector:
        matchLabels:
          app.kubernetes.io/name: seaweedfs
    ports:
    - port: 9327
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-traces
  namespace: observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alloy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          infra.fredrir.com/tier: project
    ports:
    - port: 4317
      protocol: TCP
    - port: 4318
      protocol: TCP
